# practice

./: .gitignore  CMakeLists.txt  README.md
include/: choosemnk.h  contract_driver_arrays.h  gemmplan.h  gett.h  readrandomtensor.hpp  saverandomtensor.hpp
src/: choosemnk.cpp  contract_driver_arrays.cpp  gemmplan.cpp  gett.cpp  gett_test.cpp  main.cpp  readrandomtensor.cpp  saverandomtensor.cpp
